# anylist_rs

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs  login.swift  readme.md
deobf/: deobfuscated.js  findings.md
docs/: architecture.md  testing.md
docs/examples/: categories.rs  list_items.rs  lists.rs  meal_planning.rs  recipes.rs  stores.rs
src/: api.rs  categories.rs  client.rs  collections.rs  error.rs  favourites.rs  icalendar.rs  items.rs  lib.rs  lists.rs  login.rs  main.rs  meal_planning.rs  operations.rs  recipes.rs  stores.rs  utils.rs
src/protobuf/: anylist.proto  anylist.proto.rs
src/realtime/: events.rs  heartbeat.rs  mod.rs  reconnect.rs  sync.rs
src/snapshots/: anylist_rs__operations__tests__add_favourite_operation_snapshot.snap  anylist_rs__operations__tests__add_favourite_operation_without_category.snap  anylist_rs__operations__tests__create_list_operation_snapshot.snap  anylist_rs__operations__tests__delete_folder_items_operation_snapshot.snap  anylist_rs__operations__tests__delete_list_operation_snapshot.snap  anylist_rs__operations__tests__delete_store_filter_operation_snapshot.snap  anylist_rs__operations__tests__delete_store_uses_updated_store_field.snap  anylist_rs__operations__tests__delete_store_without_name.snap  anylist_rs__operations__tests__remove_favourite_operation_snapshot.snap  anylist_rs__operations__tests__remove_list_settings_operation_snapshot.snap  anylist_rs__operations__tests__remove_store_uses_updated_value_field.snap  anylist_rs__operations__tests__rename_list_operation_snapshot.snap  anylist_rs__operations__tests__update_store_filter_operation_snapshot.snap  anylist_rs__operations__tests__webapp_add_shopping_list_item_2025_10_28.snap  anylist_rs__operations__tests__webapp_bulk_remove_list_items_2025_10_28.snap  webapp_captures__parse_list_with_shared_users.snap
tests/: ingredient_sections.rs  meal_plan_calendar_id.rs  recipe_serde.rs
tools/: curl_to_snapshot.py  decode_snapshot.py  response_to_test.py
