[package]
name = "anylist_rs"
version = "0.1.0"
authors = ["Phil Denhoff <phil@denhoff.ca>"]
edition = "2021"
include = ["src/"]

[lib]
name = "anylist_rs"
crate-type = ["lib", "cdylib"]
bench = false
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
prost = "0.12"
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.18.1", features = ["rng-getrandom", "v4"] }

[build-dependencies]
prost-build = "0.11.0"
