[package]
name = "anylist_rs"
version = "0.3.0"
authors = ["Phil Denhoff <phil@denhoff.ca>"]
edition = "2021"
description = "Interact with the grocery list management app AnyList's undocumented API. Unofficial."
license = "MIT"
repository = "https://github.com/phildenhoff/anylist_rs"
homepage = "https://github.com/phildenhoff/anylist_rs"
readme = "README.md"
keywords = ["anylist", "grocery", "shopping", "api", "list"]
categories = ["api-bindings"]
exclude = ["src/snapshots/"]

[lib]
name = "anylist_rs"
crate-type = ["lib", "cdylib"]
bench = false
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
prost = "0.12"
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.18.1", features = ["rng-getrandom", "v4"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
urlencoding = "2.1"

[build-dependencies]
prost-build = "0.11.0"

[dev-dependencies]
insta = "1.40"
hex = "0.4"
