[package]
name = "anylist_rs"
version = "0.3.3"
authors = ["Phil Denhoff <phil@denhoff.ca>"]
edition = "2021"
description = "Interact with the grocery list management app AnyList's undocumented API. Unofficial."
license = "MIT"
repository = "https://github.com/phildenhoff/anylist_rs"
homepage = "https://github.com/phildenhoff/anylist_rs"
readme = "README.md"
keywords = ["anylist", "grocery", "shopping", "api", "list"]
categories = ["api-bindings"]
exclude = [
    "src/snapshots/",
    "tools/",
    "docs/",
]


[lib]
name = "anylist_rs"
crate-type = ["lib", "cdylib"]
bench = false
path = "src/lib.rs"

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls", "tokio-tungstenite/connect", "tokio-tungstenite/native-tls"]
rustls-tls = ["reqwest/rustls-tls", "tokio-tungstenite/connect", "tokio-tungstenite/rustls-tls-native-roots"]

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
prost = "0.12"
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.18.1", features = ["rng-getrandom", "v4"] }
tokio-tungstenite = { version = "0.21", default-features = false }
futures-util = "0.3"
urlencoding = "2.1"
regex = "1.0"

[build-dependencies]
prost-build = "0.11.0"

[dev-dependencies]
insta = "1.40"
hex = "0.4"
